some functionality implemented

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -6,14 +6,40 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 
 add_executable(docs
-        cli.cpp
-        cli.h
+        CLI.cpp
+        CLI.h
+        collection.cpp
         collection.h
+        controller.cpp
         controller.h
         dna_sequence.cpp
         dna_sequence.h
-        executeHandler.h
-        IexecuteHandler.h
+        DNAMetadata.cpp
+        DNAMetadata.h
+        Dup.cpp
+        Dup.h
+        IAppend.cpp
+        IAppend.h
+        IDelete.cpp
+        IDelete.h
+        IExecute.cpp
+        IExecute.h
+        IGet.cpp
+        IGet.h
+        IUpdate.cpp
+        IUpdate.h
+        IUpdateStatus.cpp
+        IUpdateStatus.h
+        Load.cpp
         Load.h
-        mapCommand.h
-        DNAMetadata.cpp DNAMetadata.h collection.cpp Load.cpp main.cpp IAppend.cpp IAppend.h IUpdate.cpp IUpdate.h IDelete.cpp IDelete.h controller.cpp executeHandler.cpp IexecuteHandler.cpp mapCommand.cpp)
+        main.cpp
+        MapCommand.cpp
+        MapCommand.h
+        New.cpp
+        New.h
+        Pair.cpp
+        Pair.h
+        Save.cpp
+        Save.h
+        Slice.cpp
+        Slice.h)
